@@ -220,7 +220,7 @@ c_lib_objs := \
 	snow3g_avx.o \
 	snow3g_avx2.o \
 	snow3g_tables.o \
-	snow3g_iv.o
+	snow3g_iv.o \
 
 #
 # List of ASM modules (root directory/common)
@@ -496,6 +496,7 @@ asm_avx512_lib_objs := \
 	mb_mgr_aes_xcbc_submit_flush_vaes_avx512.o \
 	mb_mgr_zuc_submit_flush_avx512.o \
 	mb_mgr_zuc_submit_flush_gfni_avx512.o \
+	chacha20_avx512.o \
 	ethernet_fcs_avx512.o
 
 #
